# daylog

./: .gitignore  PACKAGING.md  README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
prototype/: index.html
scripts/: gen-icon.mjs
src/: App.tsx  ai.ts  backend.ts  copy.ts  docx.ts  parse.ts  report.ts  settings.ts  styles.css  templates.ts  toast.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/db-tests/: Cargo.toml  lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: AcSearchInput.tsx  AcTextarea.tsx  EntryItem.tsx  SettingsModal.tsx  SplitModal.tsx
src/pages/: Report.tsx  Review.tsx  Write.tsx
